Update user fields
