# ent/migrate/schema.go
@@ -214,10 +214,10 @@ var (
 		{Name: "weight", Type: field.TypeFloat64},
 		{Name: "gender", Type: field.TypeEnum, Enums: []string{"male", "female", "nonbinary"}},
 		{Name: "education_level", Type: field.TypeEnum, Enums: []string{"elementry_school_or_below", "middle_school", "high_school", "bachelor", "master", "doctorate"}},
-		{Name: "occupation", Type: field.TypeEnum, Enums: []string{"student", "government_employee", "service_industry", "industry_and_commerce", "freelancer", "domestic"}},
+		{Name: "occupation", Type: field.TypeEnum, Enums: []string{"student", "government_employee", "service_industry", "industry_and_commerce", "freelancer", "domestic", "retired", "others"}},
 		{Name: "marriage", Type: field.TypeEnum, Enums: []string{"single", "married", "divorced", "widowed"}},
-		{Name: "medical_history", Type: field.TypeString, Nullable: true, Size: 100},
-		{Name: "medication_status", Type: field.TypeString, Nullable: true, Size: 100},
+		{Name: "medical_history", Type: field.TypeEnum, Enums: []string{"high_blood_pressure", "hyperlipidemia", "diabetes", "heart_disease", "stroke", "mental_illness", "dementia", "none_of_the_above"}},
+		{Name: "medication_status", Type: field.TypeEnum, Enums: []string{"cardiovascular_drugs", "psychiatric_drugs", "other_drugs", "no_drugs"}},
 		{Name: "demented_among_direct_relatives", Type: field.TypeBool},
 		{Name: "head_injury_experience", Type: field.TypeBool},
 		{Name: "ear_condition", Type: field.TypeEnum, Enums: []string{"normal", "slightly_affecting_conversation", "need_hearing_aid"}},
